apps/cli/src/snapshots/costroid__render__tests__snapshot_trends_plain.snap
---
source: apps/cli/src/render.rs
expression: "render_trends(&priced_trends(), RenderOptions::plain())"
---
costroid trends
period: month, group: model, estimated API spend: ~$168.00
api spend buckets:
  2026-06-01: ~$96.00
  2026-06-08: ~$45.00
breakdown:
  claude opus 4.7: ~$96.00, 60 tokens
  gpt 5.5: ~$45.00, 60 tokens
  sonnet 4.6: ~$27.00, 60 tokens
subscription API-equivalent value, estimate not bill:
  gpt 5.5: ~$0.00, 60 tokens, unpriced/partial
insight: claude opus 4.7 drove most of your API spend in this period. (estimated)
provider cursor missing: no local data found
